add_executable(testCpu main_cpu.cpp)
target_link_libraries(testCpu PUBLIC SVD3)
install(TARGETS testCpu DESTINATION ${CMAKE_INSTALL_BINDIR})

add_executable(testGpu main_gpu.cpp)
target_link_libraries(testGpu PUBLIC SVD3)
install(TARGETS testGpu DESTINATION ${CMAKE_INSTALL_BINDIR})

find_package(glm QUIET)
if(glm_FOUND)
    add_executable(testGlm main_glm.cpp)
    target_compile_definitions(testGlm PUBLIC -DGLM_ENABLE_EXPERIMENTAL)
    target_link_libraries(testGlm PUBLIC glm SVD3)
    install(TARGETS testGlm DESTINATION ${CMAKE_INSTALL_BINDIR})
else()
    message(STATUS "GLM not found - Sample will not be built")
endif()